@@ -38,6 +38,8 @@ Uliweb Change Log
    assume the delete_fieldname is 'deleted', and if you pass real field_name it'll
    use it directly. This way will not delete the record at all, just change the 
    delete_fieldname value from False to True.
+#. Fix RemoteField default datatype as int.
+#. Refactor the ReferenceProperty datatype process.
 
 0.1.1 Version
 -----------------
